# vp_analyser

./: Cargo.toml  paths.toml  vp_analyser_config.toml
src/: analyse.rs  data.rs  main.rs  paths.rs  pdf_parser.rs  timetable.rs  vp_analyser_config.rs  vp_parser.rs  vp_update.rs
timetables/: timetabel_even.csv  timetabel_odd.csv
