[package]
name = "Main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lopdf = { version = "0.30.0", features = ["pom", "pom_parser"] }
pdf-extract = "0.7.2"
chrono = "0.4.31"
csv = "1.3.0"
execute = "0.2.13"